[package]
name = "klu"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Maix0/klu"
authors = ["Maix <maix522@gmail.com>"]
description = "A small library/cli to work with a simple archive format"
categories = ["command-line-interface", "filesystem", "parsing"]
keywords = ["archive", "package"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cli = ["dep:clap"]

[dependencies]
thiserror = "1.0.31"
walkdir = "2.3.2"
clap = { version = "3.2.8", optional = true, features = ["derive"] }






[[bin]]
name = "klu"
path = "src/bin/main.rs"
required-features = ["cli"]
